--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -6,93 +6,12 @@ body {
 
 .taby-menu {
   flex: 1 1 0;
-  flex-direction: column;
-  font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-
-  font-family: sans-serif;
-  line-height: 1.5;
-}
-
-.taby-search {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 16px;
-  padding: 14px;
-}
-
-.taby-searchInput {
-  all: unset;
-  display: flex;
-  width: 100%;
-  text-align: left;
-
-  font-size: 18px;
-  line-height: 27px;
-}
-
-.taby-searchInput:focus {
-  outline: none;
 }
 
 .taby-searchList {
-  border: 0;
-  margin: 0;
-  list-style-type: none;
   scrollbar-width: none;
-
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  overflow: scroll;
-  padding: 8px;
-
-  font-size: 14px;
 }
 
 .taby-searchList::-webkit-scrollbar {
   display: none;
-}
-
-.taby-searchItem {
-  display: flex;
-  gap: 16px;
-  align-items: center;
-  white-space: nowrap;
-  overflow-x: clip;
-  padding: 6px;
-  user-select: none;
-  border-radius: 4px;
-  font-size: 14px;
-  font-family: sans-serif;
-}
-
-.taby-searchImg {
-  display: flex;
-  align-items: center;
-  width: 18px;
-  height: 18px;
-}
-
-.taby-searchKey {
-  flex-shrink: 0;
-  width: 18px;
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 21px;
-}
-
-.taby-searchTitle {
-  font-family: sans-serif !important;
-  font-size: 14px;
-  line-height: 21px;
-}
-
-.taby-searchTotal {
-  line-height: 21px;
 }
